k8s/order-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: ecom
  labels:
    app: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: ecomsystem01.azurecr.io/order-service
          ports:
            - containerPort: 8306
              name: http
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: ecom
  labels:
    app: order-service
spec:
  selector:
    app: order-service
  ports:
    - port: 8306
      targetPort: 8306
      protocol: TCP
      name: http
  type: ClusterIP
